# IG_Agent_Friday

./: .gitignore  README.md  pyproject.toml
app/: main.py  requirements.txt
app/graph/: nodes.py  state.py  workflow.py
app/services/: meta_api.py  takeover_service.py
temp/: model.py  temp.txt
