[project]
name = "ig-agent-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.1",
    "langgraph-checkpoint>=4.1.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg-pool>=3.2.1",
    "psycopg2>=2.9.12",
    "psycopg2-pool>=1.2",
    "psycopg[binary]>=3.1.18",
    "pypdf>=4.1.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.28.0",
]

